chapter12/kiali/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - kiali.$hostip.nip.io
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        port:
          number: 20001 
        host: kiali
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
  - jaeger.$hostip.nip.io
  gateways:
  - jaeger-gateway
  http:
  - route:
    - destination:
        port:
          number: 80 
        host: tracing
